include(TheForgeUtils)

add_subdirectory(01_Transformations)
add_subdirectory(03_MultiThread)
add_subdirectory(06_MaterialPlayground)
add_subdirectory(09_LightShadowPlayground)
add_subdirectory(10_ScreenSpaceReflections)
add_subdirectory(12_ZipFileSystem)
add_subdirectory(14_WaveIntrinsics)
add_subdirectory(15_Transparency)
add_subdirectory(15a_VisibilityBufferOIT)
add_subdirectory(16_Raytracing)
add_subdirectory(17_EntityComponentSystem)
add_subdirectory(19_CodeHotReload)
add_subdirectory(21_Animations)
add_subdirectory(28_Skinning)
add_subdirectory(34_Input)
add_subdirectory(36_AlgorithmsAndContainers)
add_subdirectory(39_ParticleSystem)
